[package]
name = "texls"
version = "0.1.0"
authors = ["Nick Cameron <ncameron@mozilla.com>", "Jonathan Turner <jturner@mozilla.com>", "The RLS developers"]
description = "Rust Language Server - provides information about Rust programs to IDEs and other tools"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang-nursery/rls"
categories = ["development-tools"]

build = "build.rs"

[dependencies]
derive-new = "0.3"
env_logger = "0.4"
languageserver-types = "0.10.0"
log = "0.3"
rls-data = "= 0.4.1"
rls-span = { version = "0.4", features = ["serialize-serde"] }
rls-vfs = { version = "0.4.2" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.4"
url = "1.1.0"
url_serde = "0.2.0"

[dependencies.tectonic]
path = "./tectonic"
version = "0.1.6-dev"

[profile.dev]
opt-level = 3
